--- a/PWCat/package.json
+++ b/PWCat/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href https://xxrulixx.github.io/pwcat-study/PWCat/ && angular-cli-ghpages --branch gh-pages"
+    "deploy": "ng build --prod --aot --base-href https://xxrulixx.github.io/pwcat-study/PWCat/ && angular-cli-ghpages --branch gh-pages"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@angular/service-worker": "^6.0.0",
     "core-js": "^2.5.4",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
