--- a/PWCat/src/ngsw-config.json
+++ b/PWCat/src/ngsw-config.json
@@ -14,14 +14,19 @@
           "/*.chunk.js"
         ]
       }
-    }, {
-      "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "prefetch",
-      "resources": {
-        "files": [
-          "/assets/**"
-        ]
+    }, 
+    {
+        "name": "assets",
+        "installMode": "lazy",
+        "updateMode": "prefetch",
+        "resources": {
+          "files": [
+            "/assets/**"
+          ],
+          "urls": [
+            "https://cataas.com/**"
+          ]
+        }
       }
-    }]
+]
   }
